# aip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  SECURITY.md  VERSIONING.md  aip.db  aip_client.py  fly.toml  pyproject.toml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: feature-request.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  integration.md
.github/workflows/: e2e.yml  publish.yml  test.yml
action/: README.md  action.yml
aip_identity/: __init__.py  __main__.py  cli.py  client.py  credential_store.py  handshake.py  identity.py  middleware.py  pdr.py  pure_ed25519.py  trust.py  vc.py
aip_identity/integrations/: __init__.py  auto.py  langchain_tools.py
cli/: README.md  aip  aip-register  aip-register-secure  aip-sign
data/: nanook-paper-case-b.json  nanook-paper-case-b.jsonl
demos/: live_registration_demo.py  registration_demo.py  registration_gif_script.sh  vouch_demo.py
docs/: 0xskl_integration_spec.md  clawhub_integration_spec.md  did-method-spec.html  did-method-spec.md  explorer.html  getting-started.md  github-action.md  hello-world.md  how-it-works.html  index.html  insumer-integration-design.md  integration-guide.md  mcp_integration.md  mcp_integration_guide.md  observatory.html  oracle-integration-guide.md  outreach-templates.md  platform_integration_checklist.md  playground.html  quickstart.md  rate_limits.md  robots.txt  sep_integration_spec.md  signing-reference.md  sitemap.xml  skill_signing_spec.md  skill_signing_tutorial.md  trust-graph.html  video_script_quickstart.md  walkthrough.html  why-aip.md
docs/academic/: README.md  case_b_all_profiles_summary.json  case_b_linear_decline.jsonl  case_b_recovery_after_total_failure.jsonl
docs/badges/: README.md
docs/contexts/: v1.jsonld
docs/design/: identity-middleware.md  on-chain-did-registry.md
docs/tutorials/: index.html  langchain-crewai-identity.md  mcp_auth_tutorial.md  skill-signing.md  zero-to-trusted-agent.md
drafts/: devto-article-22-observe-cli.md  devto-ietf-agent-auth.md
examples/: a2a_identity_demo.py  crewai_integration.py  demo.py  encrypted_messaging.py  mcp_client_with_aip.py  multi_agent_workflow.py  trust_network_demo.py  verify-skill-signatures.yml  verify_skill.py
examples/frameworks/: README.md  autogen_verified_chat.py  crewai_signed_workflow.py  fastapi_middleware.py  langchain_identity.py  standalone_identity.py
examples/mcp-server/: README.md  aip_verified_server.py
mcp-server/: Dockerfile  LICENSE  README.md  pyproject.toml  server.json
mcp-server/aip_mcp_server/: __init__.py  server.py
mcp-server/tests/: test_server.py
service/: aip.db  database.py  main.py  messaging_design.md  moltbook.py  rate_limit.py  requirements.txt  system_identity.py
service/routes/: admin.py  challenge.py  feed.py  handshake.py  messaging.py  observations.py  onboard.py  oracle.py  profile.py  register.py  skill.py  verify.py  vouch.py  webhooks.py
skills/: .aip-signature.json  aip-identity.skill
skills/aip-identity/scripts/: aip.py
skills/aip-verify/: skill.md
src/: __init__.py  identity.py  trust.py  vc.py
tests/: conftest.py  pdr_test_fixtures.py  test_admin.py  test_aip.py  test_audit.py  test_cli_messaging_integration.py  test_cli_observe.py  test_cli_smoke.py  test_client.py  test_credential_store.py  test_demo.py  test_did_key.py  test_doctor.py  test_env_credentials.py  test_export_import.py  test_feed.py  test_handshake.py  test_init.py  test_integrations_auto.py  test_live_service.py  test_middleware.py  test_migrate_cache.py  test_observations_api.py  test_oracle.py  test_oracle_e2e.py  test_pdr.py  test_pdr_fixtures.py  test_pdr_sliding_window.py  test_prod_safety.py  test_profile.py  test_replay_cache.py  test_resolve_crossprotocol.py  test_service.py  test_status.py  test_trust_path_pdr.py  test_trust_score_cli.py  test_vc.py  test_vouch_vc_api.py  test_webhooks.py  test_welcome_vouch.py
