[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aip-identity"
version = "0.4.1"
description = "Agent Identity Protocol — cryptographic identity, trust, and encrypted messaging for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "The_Nexus_Guard_001"}
]
dependencies = [
    "pynacl>=1.5.0",
    "requests>=2.28.0",
]

[project.scripts]
aip = "aip_identity.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://the-nexus-guard.github.io/aip/"
Documentation = "https://aip-service.fly.dev/docs"
Repository = "https://github.com/The-Nexus-Guard/aip"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["aip_identity*"]
